Solved flow problem for small modal content
NB. I wrapped the overlay header+content+footer in an 'inner' element to solve some layout problems. Renamed 'blur' to 'spacer' for the sake of clarity

--- a/css/style.css
+++ b/css/style.css
@@ -1719,34 +1719,37 @@ a.link--icon.isActive img[src*="toggle"] {
   max-height: 3rem;
   z-index: 5;
   text-align: left;
+  background: rgba(255, 255, 255, 0);
   transform: translateY(0);
   transition: all 0.3s ease;
   overflow: auto; }
   .card.card--leadActive .card__overlay {
-    max-height: 100%; }
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-height: 100%;
+    backdrop-filter: blur(0.25rem);
+    background: rgba(255, 255, 255, 0.5); }
     .card.card--leadActive .card__overlay .close {
       display: block; }
     .card.card--leadActive .card__overlay .chevron {
       display: none; }
-  .card__overlay--blur {
+  .card__overlay--spacer {
     display: none;
     width: 100%;
-    height: 10rem;
+    min-height: 20rem;
     z-index: 4;
     background: white;
     opacity: 0;
     transition: all 0.3s ease;
-    transform-origin: top center;
-    transform: scaleY(3) translateY(-10rem);
     cursor: pointer; }
-    .card.card--leadActive .card__overlay--blur {
+    .card.card--leadActive .card__overlay--spacer {
       display: block;
-      opacity: 0.5;
-      transform: translateY(0);
+      min-height: 10rem;
       transition-delay: 1s; }
-      .card.card--leadActive .card__overlay--blur:hover {
+      .card.card--leadActive .card__overlay--spacer:hover {
         opacity: 0.3; }
-    .card.card--leadActive .card__overlay--blur:hover {
+    .card.card--leadActive .card__overlay--spacer:hover {
       opacity: 0.3; }
   .card__overlay--header {
     position: sticky;
@@ -1829,11 +1832,6 @@ a.link--icon.isActive img[src*="toggle"] {
     @media screen and (min-width: 30rem) {
       .card__overlay h4 {
         font-size: 0.875rem; } }
-
-.card.card--leadActive .card__question,
-.card.card--leadActive .card__title,
-.card.card--leadActive .card__answer {
-  filter: blur(0.25rem); }
 
 .card__overlay--form {
   display: flex;
